# Term-2019

./: .gitignore  README.md  test  test.cpp
FAT/: .gitignore  CMakeCache.txt  CMakeLists.txt  FAT  Makefile  Project.cbp  README.md  cmake_install.cmake  fat.h  fatFile.cbp  main.cpp  my_print.asm  test.img
FAT/engine/: InstrEngine.cpp  InstrEngine.h
FAT/fat/: fat.cpp  fat.h
FAT/fatFile/: fat.cpp  fat.h
IO/: CMakeLists.txt  Makefile  a.img  bochssrc  main.cpp
IO/example/: Makefile  a.img
IO/example/include/: console.h  keyboard.h  keymap.h  tty.h
IO/example/kernel/: clock.c  console.c
IO/include/: console.h  const.h  global.h
IO/kernel/: clock.c  console.c  keyboard.c  tty.c
OS/FAT/: CMakeLists.txt  FAT.cbp  ref.img
OS/IO/: .gitignore  Makefile
OS/PV/: Makefile  a.img
OS/bochs/: Makefile  basic.asm  helloworld.asm
OS/exercises/: 1.reader_writer.cpp  2.sleep_baber.cpp  3.hunter.cpp  4.bank_service.cpp  5.buffer_manage.cpp  6.bus.cpp  7.smkoker.cpp  8.thinkers.cpp  reader_writer.cpp  semaphore.h
PV/: a.img  dd.c
PV/include/: console.h  global.h  proc.h  proto.h
PV/kernel/: clock.c  console.c  global.c  keyboard.c  main.c  printf.c  proc.c
PV/orange/: Makefile  a.img
bochs/: plus.asm  test.asm
compiler/: README.md  pom.xml
compiler/lab1/: README.md  REs.txt  input.txt  test.txt
compiler/lab2/: README.md  input.txt  (+3 more)
front/: Dockerfile  README.md  app.js  docker-compose.yml  home.html  homepage.html  login.html  makefile  package-lock.json  package.json  register.html
lsWork/: .gitignore  CMakeLists.txt  FAT.cpp  FAT.h  Makefile
(+81 files in other folders)
