project(bochsIO)
cmake_minimum_required(VERSION 3.14)
set(CMAKE_ASM_NASM_OBJECT_FORMAT macho64)
set(CMAKE_CXX_STANDARD 14)
enable_language(ASM_NASM)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m64")
set(CMAKE_ASM_NASM_FLAGS "${CMAKE_ASM_NASM_FLAGS}  --prefix _")
#是否使用nasm
#add_definitions(-D ENABLE_ASM)
add_executable(bochsIO main.cpp)